--- a/stories.html
+++ b/stories.html
@@ -105,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="soңғy-ret-қashan-aynaғa" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91022930_141059037464401_7817639135436137642_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=jfVvmiJD0HwAX9h5z2Z&oh=e2cb688d99ade54d26165cc76f6793e2&oe=5E83E2AC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Соңғы рет қашан айнаға">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="karantin-kezіnde-oқu-kerektі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91389458_626623741453065_2396203160801251732_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=hBC4KDUHhXsAX8vvzyQ&oh=b23f92401476c271363fe9354225a30e&oe=5EA847E1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Карантин кезінде оқу керекті">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91389458_626623741453065_2396203160801251732_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=L6bNJti29aYAX-K6SnB&oh=cde7873ea269e6a25ffdf46fb4bc3f92&oe=5EAC3C61" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Карантин кезінде оқу керекті">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -117,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-shymkentte-өtken-9-kүn" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90745086_673133463502814_1172447644099010983_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=eTfp6Bts_RsAX-dnVGc&oh=ce4d0ebf8d0e07fb9030260f18cc6ba7&oe=5EAA3FB1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤓 Шымкентте өткен 9 күн.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90745086_673133463502814_1172447644099010983_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=aCOqtZ3298AAX8MRyUB&oh=479103f889bceabce5158ead8c89eb52&oe=5EAA3FB1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤓 Шымкентте өткен 9 күн.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="virusx-dollar-taғy-basқa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=poHo0wjaYAgAX-L5iiW&oh=46e10156015124691e68093a8fc92d56&oe=5EAA4385" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=sVRi8HtnehwAX8xBvDX&oh=c8019a8d9c657d2cabd53a923015854e&oe=5EAA4385" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -137,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-mұnay-әlemdіk-baғasynyң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=20s8aPGHjhEAX_9d8Gv&oh=4e6e9bbbee12be470c73211beebdd12d&oe=5EA8AB8D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=MUULzHZ-INkAX8b59PP&oh=569b0a153676f9c6a9ac87fb48aaa697&oe=5EACA00D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxөzіңe-senіmsіzdіk-tanytsaң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=lBkH4x7Ta18AX8v2xq0&oh=166b922bcf2b10bb5b3a0dfe04bfa4bc&oe=5EA82F6B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=lBkH4x7Ta18AX8v2xq0&oh=7abe115728b6476507653d2f16d251e6&oe=5EAC23EB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -157,7 +167,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-әtteң-osy-sұraқty-16mln" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=lzBslYpXutkAX9YL6Ed&oh=3595c492a71767e13de8cf94f3264b8f&oe=5EA88C5B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=G6RtrGNOdJgAX8yVQTu&oh=e1dda9fee3127071e34303a388c58760&oe=5EAC80DB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -177,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=BRuWyHeXyikAX9vOrt1&oh=2ea3d7c69536ef0c70801a9d0b94455c&oe=5EAA1642" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=uZCy_NAKfpkAX_AiZEk&oh=d3e315ce74e6d1c70974bc947168bf7c&oe=5EAA1642" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -197,7 +207,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=W53jKl_856cAX8j7YC9&oh=a726f5dfb55ebf085983b1791cb23bd2&oe=5EAA9DFF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ghiVksnDgTEAX8D68N4&oh=72b0f795fc816af1b1844b30d5560f3f&oe=5EAA9DFF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -217,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=yGveP31ew1sAX82xm05&oh=0c006f183bca49677964637ee37445be&oe=5EA82B61" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=yGveP31ew1sAX82xm05&oh=ca990c91750341b51e2167fd0c7afc74&oe=5EAC1FE1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -257,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=hmm4Tf_rL_gAX95RFHg&oh=bdce4e8493766631692ce2ad42051a36&oe=5EA84C98" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=hmm4Tf_rL_gAX95RFHg&oh=148ada32dd87085e432a66af0eb1b36a&oe=5EAC4118" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,17 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=9doduY6mpEcAX8d3zgh&oh=82366d927d2ff6be18f753ab3c44f93f&oe=5EA8FB96" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xxүy-satudyң-3x2-құpiyasy" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=_E-8zAbCFoYAX8MCn_g&oh=27a7c2caf114f58b2ef11782e9fa2cf2&oe=5EAA5452" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=wxEHB3STTdkAX_-yK19&oh=ffd9a17552526b1f995094afd19e6cba&oe=5EA8FB96" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
