--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="сұрақ құпия baаkыт kуaныш сыйлық ктlike бизnes ktклуб тaмaшa үйсату">
-    <meta name="keywords" content="сұрақ құпия baаkыт kуaныш сыйлық ктlike бизnes ktклуб тaмaшa үйсату" />
+    <meta name="description" content="сұрақ baаkыт kуaныш сыйлық ктlike бизnes ktклуб тaмaшa ктkazak ktбақыт">
+    <meta name="keywords" content="сұрақ baаkыт kуaныш сыйлық ктlike бизnes ktклуб тaмaшa ктkazak ktбақыт" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="😁 Арманшыл Саят" />
-    <meta property="og:description" content="сұрақ құпия baаkыт kуaныш сыйлық ктlike бизnes ktклуб тaмaшa үйсату" />
+    <meta property="og:description" content="сұрақ baаkыт kуaныш сыйлық ктlike бизnes ktклуб тaмaшa ктkazak ktбақыт" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="sayatahmethan_" />
 
@@ -141,15 +141,6 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="ktбақыт">
-									<a href="./tags/./ktbaқyt.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ktbaқyt.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">ktбақыт</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="ktклуб">
 									<a href="./tags/./ktklub.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktklub.png);"></div>
@@ -222,11 +213,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="құпия">
-									<a href="./tags/./құpiya.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/құpiya.png);"></div>
+								<div class="stories__slide" title="kerekсің">
+									<a href="./tags/./kereksің.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/kereksің.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">құпия</div>
+">kerekсің</div>
 									</a>
 								</div>
 							</div>
@@ -240,29 +231,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="үйсату">
-									<a href="./tags/./үysatu.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/үysatu.png);"></div>
+								<div class="stories__slide" title="ktбақыт">
+									<a href="./tags/./ktbaқyt.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ktbaқyt.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">үйсату</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="бб команда">
-									<a href="./tags/./bb-komanda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/bb-komanda.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">бб команда</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="суперсаят">
-									<a href="./tags/./supersayat.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/supersayat.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">суперсаят</div>
+">ktбақыт</div>
 									</a>
 								</div>
 							</div>
@@ -367,7 +340,7 @@ color: #C6BB73;
 								<a href="./posts/./xx-өz-өmіrіңdі-қiyndatpa.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>189</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>190</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/81327250_1101761173508482_7031988878103105573_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=wE5NIjBJvo0AX-U9IKt&oh=b001e0f8378eb10a4cbcfdaa056282b8&oe=5EAA83F2" alt="😏 Өз өміріңді қиындатпа!">
 									</div>
@@ -391,7 +364,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>150</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=BRuWyHeXyikAX9vOrt1&oh=2ea3d7c69536ef0c70801a9d0b94455c&oe=5EAA1642" alt="😮 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=uZCy_NAKfpkAX_AiZEk&oh=d3e315ce74e6d1c70974bc947168bf7c&oe=5EAA1642" alt="😮 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -402,22 +375,11 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>149</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=W53jKl_856cAX8j7YC9&oh=a726f5dfb55ebf085983b1791cb23bd2&oe=5EAA9DFF" alt="🤑 Жарнама жібермей 🍋 тап!">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ghiVksnDgTEAX8D68N4&oh=72b0f795fc816af1b1844b30d5560f3f&oe=5EAA9DFF" alt="🤑 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">🤑 Жарнама жібермей 🍋 тап!</div>
-								</a>
-								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=yGveP31ew1sAX82xm05&oh=0c006f183bca49677964637ee37445be&oe=5EA82B61" alt="👋 Қайырлы күн Қалайық, Мұнда">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #243154;
-">👋 Қайырлы күн Қалайық, Мұнда</div>
 								</a>
 								<a href="./posts/./xxmen-өmіrge-ne-үshіn-keldіm.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -435,7 +397,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>111</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=lzBslYpXutkAX9YL6Ed&oh=3595c492a71767e13de8cf94f3264b8f&oe=5EA88C5B" alt="😬 Әттең осы сұрақты 16млн">
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=G6RtrGNOdJgAX8yVQTu&oh=e1dda9fee3127071e34303a388c58760&oe=5EAC80DB" alt="😬 Әттең осы сұрақты 16млн">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -446,11 +408,22 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>86</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=poHo0wjaYAgAX-L5iiW&oh=46e10156015124691e68093a8fc92d56&oe=5EAA4385" alt="Вирус, доллар тағы басқа">
+										<img class="js-now-lazy" src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=sVRi8HtnehwAX8xBvDX&oh=c8019a8d9c657d2cabd53a923015854e&oe=5EAA4385" alt="Вирус, доллар тағы басқа">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">Вирус, доллар тағы басқа</div>
+								</a>
+								<a href="./posts/./xxөzіңe-senіmsіzdіk-tanytsaң.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>71</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=lBkH4x7Ta18AX8v2xq0&oh=7abe115728b6476507653d2f16d251e6&oe=5EAC23EB" alt="☝️Өзіңе сенімсіздік танытсаң">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #243154;
+">☝️Өзіңе сенімсіздік танытсаң</div>
 								</a>
 							</div>
 						</div>
