--- a/stories.html
+++ b/stories.html
@@ -60,7 +60,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=KUlMyUMx-REAX_Pu1yE&oh=64bd31d3f10068fcd861685ee3537113&oe=5EB16B34" alt="😁 Арманшыл Саят" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_ohc=KUlMyUMx-REAX_Pu1yE&oh=64bd31d3f10068fcd861685ee3537113&oe=5EB16B34" alt="Маркетолог Саят" /></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</div>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -107,7 +107,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="soңғy-ret-қashan-aynaғa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91022930_141059037464401_7817639135436137642_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=51FgXFWcajwAX8aPWxs&oh=f02061ffa8e761cec157e1b5d95a0092&oe=5E8A7A2C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Соңғы рет қашан айнаға">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91022930_141059037464401_7817639135436137642_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=51FgXFWcajwAX8aPWxs&oh=9055c5d22b52fcf13778f9e3c9d9dcfd&oe=5E8BCBAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Соңғы рет қашан айнаға">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -117,7 +117,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="karantin-kezіnde-oқu-kerektі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91389458_626623741453065_2396203160801251732_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=YmXXWDxLJGYAX_LgHs_&oh=14a37dd19dd95f0a2c5466c0ce1f90cd&oe=5EB030E1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Карантин кезінде оқу керекті">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/91389458_626623741453065_2396203160801251732_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=fSMYJAbJ-U0AX-lZdHc&oh=de16d9c80f682f31918cefb7bc156d37&oe=5EB42561" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Карантин кезінде оқу керекті">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -127,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-shymkentte-өtken-9-kүn" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90745086_673133463502814_1172447644099010983_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=OQtKz3ToTlIAX_Tl6JE&oh=1977a2f7c407a1853824d5ee13d2e86f&oe=5EB228B1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤓 Шымкентте өткен 9 күн.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/90745086_673133463502814_1172447644099010983_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=102&_nc_ohc=O0u7PPj3HHEAX8wdkR-&oh=106b678495dbcb12fc25f94404d361ee&oe=5EB228B1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤓 Шымкентте өткен 9 күн.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -137,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="virusx-dollar-taғy-basқa" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=XLqjW_YCvNEAX8xGvtN&oh=b2a8e1b04ab340257cd89ecbbe4e14fa&oe=5EB22C85" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/90218126_350197805894518_6530716064130220800_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=110&_nc_ohc=mV_AE4M2tDMAX9WPPkO&oh=f4b8f3bb16f3848e6c60f7c4bbe40fb6&oe=5EB22C85" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Вирус, доллар тағы басқа">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -147,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-mұnay-әlemdіk-baғasynyң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=miDn_3HhG5wAX80rMEb&oh=efeda3777fb39e7d2f3ae359a14f005b&oe=5EB0948D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/87606770_2358201254471805_2782798178909391867_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=e1hClsSD4jUAX_45R7A&oh=3f0b41ef4863b2004c2b1ac197867c9a&oe=5EB4890D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤯 Мұнай әлемдік бағасының">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -157,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxөzіңe-senіmsіzdіk-tanytsaң" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=HtIsNNJ18x4AX9cscXt&oh=70ac67368070cc46d907241fd196efa6&oe=5EB0186B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84419609_660387121392825_6849093406712899036_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=HtIsNNJ18x4AX9cscXt&oh=e4d3df63f5b53b60d218d31f8caf78dc&oe=5EB40CEB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Өзіңе сенімсіздік танытсаң">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -167,7 +167,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-әtteң-osy-sұraқty-16mln" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=Zw4yMorBQuYAX9mAvKZ&oh=f7493ab7ae888280acaa04583e75c76b&oe=5EB0755B" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/84057952_1473130616193499_2684157898017634379_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=slb4VJ9IDg4AX9EIJh3&oh=8094162ab606aa08ca108d1ae59fc97c&oe=5EB469DB" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😬 Әттең осы сұрақты 16млн">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=Xlxqdo_VwaYAX8epqiJ&oh=02a851aa8caa565acc2b1a581b2d0d46&oe=5EB1FF42" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=101&_nc_ohc=qUkk_YKJzEQAX9sDCcd&oh=1d1d8eef90ee7773aad65e3df07eb46f&oe=5EB1FF42" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -207,7 +207,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=ClomtzQblIgAX-kNyhR&oh=0fb96146729c041a8d8061a48d809613&oe=5EB286FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=109&_nc_ohc=TKTMKoTJTe8AX8AnGQW&oh=60ff20663772b3b9c32cc77671dc53f5&oe=5EB286FF" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -227,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=ukwuLgJo3gcAX-gdy8W&oh=30da6fd5fa63792862f0b7c5343d2f48&oe=5EB01461" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-2.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-frt3-2.cdninstagram.com&_nc_cat=107&_nc_ohc=ukwuLgJo3gcAX-gdy8W&oh=ab544dc7fdbdda80d640f01564adadcc&oe=5EB408E1" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=KMQAGBotxnwAX-rycIx&oh=33e6dcac412060b8aabf81afe950524b&oe=5EB03598" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frt3-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-frt3-1.cdninstagram.com&_nc_cat=104&_nc_ohc=KMQAGBotxnwAX-rycIx&oh=b9d85e302568f960f46f8f68f8035e34&oe=5EB42A18" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -277,7 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=pEUF9SDb_4IAX8U22L0&oh=6c2935e67c834c00d8d2b49cc541f3f9&oe=5EB0E496" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-frx5-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-frx5-1.cdninstagram.com&_nc_cat=111&_nc_ohc=pSRQWD1USO4AX8DB1jv&oh=86dc1b205594667c5546daf7eafc6c7f&oe=5EB4D916" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
